<resources>
    <string name="app_name">WorkOutClass</string>
    <string name="title_activity_workout_list">Previous Workouts</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="workoutListTimeHeader">Date</string>
    <string name="workoutListDistanceHeader">Distance</string>
    <string name="workoutListSplitheader">Split</string>




    <string name="Welcome">Main Menu Options</string>
    <string name="Input">Manual Score Input</string>
    <string name="Database">View Scores</string>
    <string name="Exit">Exit</string>

    <string name="title_activity_input">Input Ergo Score</string>
    <string name="date">Date</string>
    <string name="intervals">Intervals</string>
    <string name="interval">Interval</string>
    <string name="Average_Scores_Title">Average Scores</string>
    <string name="time">Time</string>
    <string name="power">Watts</string>
    <string name="spm">SPM</string>

    <string-array name="Months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string-array name="Years">
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
    </string-array>
    <string-array name="Days">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="title_activity_score_input">ScoreInput</string>

    <string name="title_activity_testinput">Testinput</string>
    <string name="title_activity_inspect">Inspect</string>
    <string name="title_activity_inout_test">InoutTest</string>
    <string name="title_activity_manual_input">ManualInput</string>
    <string name="previous_workouts_button_text">Previous Workouts</string>
    <string name="image_header_text">Get Workout From Image</string>
    <string name="load_image_button_text">From Storage</string>
    <string name="capture_image_button_text">From Camera</string>


    <string name="workout_view_header_time">Time</string>
    <string name="workout_view_header_distance">Distance</string>
    <string name="workout_view_header_spm">SPM</string>
    <string name="workout_view_header_watts">Watts</string>
    <string name="workout_view_header_split">s/500m</string>
    <string name="title_activity_workout_view">WorkoutViewActivity</string>

    <string name="EXTRA_WORKOUT_PASSED">com.example.mapinguari.workoutclass.EXTRA_WORKOUT_PASSED</string>
    <string name="EXTRA_WORKOUT">com.example.mapinguari.workoutclass.WORKOUT</string>
    <string name="workout_view_header_energy_per_stroke">J/Str</string>
    <string name="workout_view_header_distance_per_stroke">m/Str</string>
    <string name="save_button_text">Save Workout</string>
    <string name="interval_view_rest_time_title">RestTime (s)</string>
    <string name="min_sec_delim">.</string>
    <string name="dialog_split_title">Set your split</string>
    <string name="split_dialog_positive">Input</string>
    <string name="split_dialog_negative">Cancel</string>
    <string name="dialog_time_title">Set Time</string>
    <string name="add_interval_button_text">Add Interval</string>
    <string name="WORKOUT_ID_EXTRA">com.example.mapinguari.workoutclass.WORKOUT_ID_EXTRA</string>
    <string name="edit_button_text">Edit Workout</string>
    <string name="title_activity_corner_picker">CornerPickerActivity</string>
    <string name="EXTRA_ERGO_IMAGE">com.example.mapinguari.workoutclass.EXTRA_ERGO_IMAGE</string>
    <string name="corner_picker_save_button_text">Get Workout</string>
    <string name="title_activity_ergo_capture">ErgoCapture</string>
    <string name="title_activity_debug">Debug</string>
    <string name="corner_picker_debug_button">Debug</string>
</resources>
