<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainMenu"
    android:id="@+id/SJB">

    <TextView android:text="@string/Welcome" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Input"
        android:id="@+id/button"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:longClickable="false"
        android:onClick="GoToInputActivity" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous_workouts_button_text"
        android:id="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="160dp"
        android:onClick="GoToInspect"/>

    <TextView android:text="@string/image_header_text" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_image_button_text"
        android:id="@+id/LoadImage"
        android:onClick="LoadImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
    />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capture_image_button_text"
        android:id="@+id/CaptureImage"
        android:onClick="CaptureImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        />


</RelativeLayout>
