<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:paddingBottom="10dp"
    android:paddingTop="10dp"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/workoutListTimeHeader"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/workoutListDistanceHeader"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/workoutListSplitheader"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        />

</LinearLayout>
